crates/biome_cli/tests/snapshots/main_cases_reporter_summary/reports_diagnostics_summary_lint_command.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `index.css`

```css


.brokenStyle { color: f( }

.style {
                color: 
                fakeFunction()
}

```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
reporter/parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The following files have parsing errors.
  
  - index.css
  
Analyzer ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Some analyzer rules were triggered

Rule Name                                                 Diagnostics
lint/correctness/noUnknownFunction                        2 (2 error(s), 0 warning(s), 0 info(s))
lint/suspicious/noImplicitAnyLet                          12 (12 error(s), 0 warning(s), 0 info(s))
lint/suspicious/noDoubleEquals                            8 (8 error(s), 0 warning(s), 0 info(s))
lint/suspicious/noRedeclare                               12 (12 error(s), 0 warning(s), 0 info(s))
lint/suspicious/noDebugger                                8 (8 error(s), 0 warning(s), 0 info(s))

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 43 errors.
```
